# lunwen

./: .code-workspace  .cursorignore  .gitignore  DATA_LOADER_COMPLETED.md  DATA_LOADER_IMPLEMENTATION.md  DATA_LOADER_IMPROVEMENTS.md  DATA_LOADING_GUIDE.md  DELIVERY_CHECKLIST.md  ENVIRONMENT_SETUP_GUIDE.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_PROGRESS.md  MONITORING_SYSTEM_REPORT.md  MVP_COMPLETE.md  QUICKSTART.md  README.md  REVIEW_FINAL_SUMMARY.md  SESSION_1_SUMMARY.md  SESSION_COMPLETE_SUMMARY.md  SESSION_SUMMARY_2025-12-05.md  TEST_REPORT.md  TRAINING_DATAFLOW_DIAGRAM.md  environment-dev.yml  environment.yml  mvp-docs-deps-roadmap_356ba4ff.plan.md  prompt_record  pyproject.toml  requirements.txt
.cursor/: user.mdc
.cursor/rules/: project.mdc
configs/: mvp.yaml
docs/: README.md
docs/architecture/: DATA_FLOW.md
docs/design/: ALGORITHM_DESIGN_OPTIONS.md  DESIGN_REFACTOR_TRACKER.md  DESIGN_REVIEW_SUMMARY.md  Design-ITER-2025-01.md  REVIEW_RESPONSE_SUMMARY.md  TECHNICAL_CORRECTIONS.md
docs/development/: CODE_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  ITER-2025-ROADMAP.md
docs/guides/: INSTALLATION_CONDA.md  TESTING_GUIDE.md  TRAINING_GUIDE.md
docs/templates/: DEPLOYMENT_TEMPLATE.md  DESIGN_TEMPLATE.md  DEVELOPMENT_TEMPLATE.md  OPERATIONS_TEMPLATE.md  README_TEMPLATE.md  REQUIREMENTS_TEMPLATE.md  TEST_TEMPLATE.md  USER_DOCUMENT_TEMPLATE.md
docs/testing/: Testing-ITER-2025-01.md
scripts/: prepare_data.py  prepare_synthetic_data.py  render_attention_maps.py  run_all_tests.sh  setup_mvp_env.sh
tests/unit/: test_graph_builder.py  test_model.py  (+10 more)
tools/: generate_acceptance_report.py  generate_test_report.py  test_red_light.py  train_red_light.py
(+59 files in other folders)
